html and css are prectic project

--- a/Milestone-01/Module-03/style/style.css
+++ b/Milestone-01/Module-03/style/style.css
@@ -1,19 +1,45 @@
+@import url("https://fonts.googleapis.com/css2?family=Gamja+Flower&family=Space+Grotesk:wght@300..700&display=swap");
+
 *{
     margin: 0;
 }
+.heading{
+    background-image: url(../asset/viciadoemcodar.gif);
+    background-repeat: no-repeat;
+    background-size: cover ;
+    background-color: rgb(141, 20, 211);
+    height: 600px;
+    padding: 100px 0;
+    max-width: 1800px;
+    align-items: center;
+    background-position: center;
+    margin:50px auto;
+    padding: 100px 0;
+}
 h1{
-    color: red;
-    font-style: italic;
-    font-weight: lighter;
-    font-family: sans-serif;
+    color: rgb(255, 255, 255);
+    /* font-style: italic; */
+    /* font-weight: ; */
+    font-family: "Space Grotesk", sans-serif;
     text-decoration: none;
     font-size: 80px;
     text-align: center;
-    text-decoration: overline;
+    /* text-decoration: overline; */
 }
-.heading{
-    background-color: aquamarine;
-    height: 600px;
-    padding: 100px 0;
-    width: 600px;
+.btn-box{
+    text-align: center;
+    margin: 60px;
+}
+.btn{
+    background-color: rgb(56, 11, 80);
+    color: white;
+    padding: 20px;
+    width: 150px;
+    font-size: 23px;
+    border-radius: 30px;
+    cursor: pointer;
+    font-family: "Gamja Flower", sans-serif;
+    border: 1px solid rgb(99, 9, 103);
+    box-shadow: 10px 20px 30px rgb(245, 28, 227);
+
 }
