--- a/Milestone-01/Module-03/style/style.css
+++ b/Milestone-01/Module-03/style/style.css
@@ -4,7 +4,7 @@
     margin: 0;
 }
 .heading{
-    background-image: url(../asset/viciadoemcodar.gif);
+    background-image:url(../asset/viciadoemcodar.gif);
     background-repeat: no-repeat;
     background-size: cover ;
     background-color: rgb(141, 20, 211);
@@ -16,6 +16,11 @@
     margin:50px auto;
     padding: 100px 0;
 }
+/* .font{
+    background-color: aqua;
+    height: 300px;
+
+} */
 h1{
     color: rgb(255, 255, 255);
     /* font-style: italic; */
